--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,40 +1,64 @@
 name: Docker Image CI
-on :
-   push:
-        branches:
-           - main 
-   pull_request:
-       branches:
-           - main 
+
+on:
+
+  push:
+
+    branches:
+
+      - main
+
+  pull_request:
+
+    branches:
+
+      - main
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Chickout code
-          uses: actions/checkout@v3
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-ation@v3    
-        - name: Log in to GitHub Container Registry
-          uses: docker/login-action@v3
-          with:
-            regstry: ghcr.io
-            username: ${{ github.repository_owner }}
-            password: ${{ secrets.GITHUB_TOKEN }}
-        - name: Build and push Docker image
+  build:
 
-          uses: docker/build-push-action@v5
+    runs-on: ubuntu-latest
 
-          with:
+    
 
-           context: .
+    steps:
 
-           push: true
+    - name: Checkout code
 
-           tags: 
-            ghcr.io/${{ github.repository_owner }}/abohmeed/getting-started:latest
-
-            ghcr.io/${{ github.repository_owner }}/abohmeed/getting-started:${{ github.sha }}
+      uses: actions/checkout@v3
 
 
-                
+    - name: Set up Docker Buildx
+
+      uses: docker/setup-buildx-action@v3
+
+
+    - name: Log in to GitHub Container Registry
+
+      uses: docker/login-action@v3
+
+      with:
+
+        registry: ghcr.io
+
+        username: ${{ github.repository_owner }}
+
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+
+    - name: Build and push Docker image
+
+      uses: docker/build-push-action@v5
+
+      with:
+
+        context: .
+
+        push: true
+
+        tags: |
+
+          ghcr.io/${{ github.repository_owner }}/abohmeed/getting-started:latest
+
+          ghcr.io/${{ github.repository_owner }}/abohmeed/getting-started:${{ github.sha }}
